--- a/a1/Makefile
+++ b/a1/Makefile
@@ -1,33 +1,33 @@
-CC = gcc
-CFLAGS = -lpthread
-
-SRCS = bots.c
-
-OBJS = $(SRCS:.c=.o)
-
-MAIN = bots
-
-.PHONY: depend clean
-
-all:	$(MAIN)
-		@echo Simple compiler named bots has been compiled
-
-$(MAIN): $(OBJS)
-		$(CC) $(CFLAGS) -o $(MAIN) $(OBJS) $(LFLAGS) $(LIBS)
-
-.c.o:
-			$(CC) $(CFLAGS) -c $<	-o $@
-
-clean:
-		$(RM) *.o *~ $(MAIN)
-
+#CC = gcc
 #CFLAGS = -lpthread
 #
-#bots:	bots.o
-#		gcc $(CFLAGS) -o bots bots.o
+#SRCS = bots.c
 #
-#bots.o:	bots.c
-#		gcc -c bots.c
+#OBJS = $(SRCS:.c=.o)
+#
+#MAIN = bots
+#
+#.PHONY: depend clean
+#
+#all:	$(MAIN)
+#		@echo Simple compiler named bots has been compiled
+#
+#$(MAIN): $(OBJS)
+#		$(CC) $(CFLAGS) -o $(MAIN) $(OBJS) $(LFLAGS) $(LIBS)
+#
+#.c.o:
+#			$(CC) $(CFLAGS) -c $<	-o $@
 #
 #clean:
-#		rm -f *.o bots
+#		$(RM) *.o *~ $(MAIN)
+
+CFLAGS = -lpthread
+
+bots:	bots.o
+		gcc bots.c $(CFLAGS) -o bots bots.o
+
+bots.o:	bots.c
+		gcc -c bots.c
+
+clean:
+		rm -f *.o bots
