--- a/a1/Makefile
+++ b/a1/Makefile
@@ -13,7 +13,7 @@ all:	$(MAIN)
 		@echo Simple compiler named bots has been compiled
 
 $(MAIN): $(OBJS)
-		$(CC) $(CFLAGS) -o $(MAIN) $(OBJS) $(LFLAGS) $(LIBS)
+		$(CC) $(CFLAGS) -o $(MAIN) $(OBJS)
 
 .c.o:
 			$(CC) $(CFLAGS) -c $<	-o $@
