--- a/a1/Makefile
+++ b/a1/Makefile
@@ -1,3 +1,13 @@
+#Jasmine Nelson RedID: 820233707 (cssc2157)
+#Ernesto Sanchez RedID: 819323499 (cssc2123)
+#
+#CS570, Summer 2020
+#Professor Leonard
+#
+#Assignment #1, Write to File Using Threads
+
+#Makefile
+
 #CC = gcc
 #CFLAGS = -lpthread
 #
