--- a/a1/Makefile
+++ b/a1/Makefile
@@ -8,8 +8,32 @@
 
 #Makefile
 
-all:
-		gcc bots.c -o bots -lpthread
+CC = gcc
+CFLAGS = -lpthread
+
+SRCS = bots.c
+
+OBJS = $(SRCS:.c=.o)
+
+MAIN = bots
+
+.PHONY: depend clean
+
+all:	$(MAIN)
+		@echo Simple compiler named bots has been compiled
+
+$(MAIN): $(OBJS)
+		$(CC) $(CFLAGS) -o $(MAIN) $(OBJS)
+
+.c.o:
+			$(CC) $(CFLAGS) -c $<	-o $@
 
 clean:
-		rm bots bots.o QUOTE.txt
+		$(RM) *.o *~ $(MAIN) QUOTE.txt
+
+
+#all:
+#		gcc bots.c -o bots -lpthread
+#
+#clean:
+#		rm bots bots.o QUOTE.txt
